[tool.poetry]
name = "caller-iot-api"
version = "0.1.0"
description = ""
authors = ["Alexandre Ferreira de Lima <alexandre.ferreira1445@gmail.com>"]
readme = "README.md"
packages = [{include = "caller_iot_api"}]

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.12"
flask-restx = "^1.1.0"
flask-httpauth = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
